--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <span></span>
             <span></span>
             <div class="image">
-                <img src="/1682033974171.png" alt="">
+                <img src="1682033974171.png" alt="">
             </div>
         </div>
     </div>
